00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ati
  labels:
    project: radiant
    tier: ati
---
apiVersion: v1
kind: Namespace
metadata:
  name: adi
  labels:
    project: radiant
    tier: adi
---
apiVersion: v1
kind: Namespace
metadata:
  name: ai
  labels:
    project: radiant
    tier: ai
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    project: radiant
    tier: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: soar
  labels:
    project: radiant
    tier: soar
