ingress-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: misp-ingress
  namespace: ati
spec:
  entryPoints:
    - web
  routes:
  - match: Host("misp.lab")
    kind: Rule
    services:
    - name: misp
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kibana-ingress
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
  - match: Host("kibana.lab")
    kind: Rule
    services:
    - name: kibana
      port: 5601
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
  - match: Host("grafana.lab")
    kind: Rule
    services:
    - name: grafana
      port: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: shuffle-ingress
  namespace: soar
spec:
  entryPoints:
    - web
  routes:
  - match: Host("shuffle.lab")
    kind: Rule
    services:
    - name: shuffle
      port: 3001
